--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -8,9 +8,17 @@ li{
 }
 a{
     text-decoration: none;
+   
 }
-
-
+.title_page{
+    text-align: center;
+    text-transform: uppercase;
+    font-family:'Times New Roman', Times;
+}
+.text_page{
+    font-size: 14px;
+}
+/* menu */
 .menu_header{
     position: fixed;
     top:0;
@@ -52,12 +60,11 @@ a{
     width: 400px;
     height: 300px;
     background: rgb(20, 20, 179);
-    top: 10%;
-    left: 10%;
+    top: 50%;
+    left: 50%;
+    margin:-150px 0 0 -700px;
     position: absolute;
     box-shadow: 0 10px 20px rgb(0 0 0 / 19%), 0 6px 6px rgb(0 0 0 / 22%);
-
-    /* margin:-200px 0 0 auto; */
 }
 .text_item_carousel{
     padding:2rem;
@@ -84,4 +91,282 @@ a{
     background-color: rgb(179, 165, 165);
     border: 1px solid #fff;
     text-decoration: none;
+}
+
+/* page news */
+.content_news{
+    padding:2rem;
+    padding-bottom: 0px;
+}
+
+.list_news{
+    margin-top:2rem;
+    display: flex;
+}
+.item_news{
+    width: 25% !important;
+    padding:0rem 1rem;
+}
+.content_item_news{
+    margin-top:1rem;
+}
+.image_news{
+    position: relative;
+}
+.blog{
+    position: absolute;
+    bottom:0;
+    background-color: red;
+
+}
+.blog span{
+    padding:1rem;
+    color:#fff;
+    text-transform: capitalize;
+}
+
+.three-lines {
+    -webkit-line-clamp: 2;
+}
+.clamp {
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
+}
+.see_more{
+    margin-top: 2rem;
+    justify-content: center;
+    text-align: center;
+    padding: 0.6rem 1rem;
+    background: rgb(20, 20, 179);
+}
+.linh_see_more{
+    color:#fff;
+    text-transform: capitalize;
+
+}
+
+/* page event */
+.image_event{
+    position: relative;
+    height: 400px;
+}
+.content_image_event{
+    background-color: rgba(0, 0, 0, 0.336);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom:0;
+    width: 100%;
+    height: 100%;
+    padding:2rem;
+}
+.img_item_event{
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover;
+}
+.list_event{
+   
+    height: 100%;
+    display: flex;
+    margin-top:2rem;
+    position: relative;
+}
+.item_event{
+    width: 25%;
+    height: 80%;
+    margin:0rem 1rem;
+    background-color: #D9D9D9;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.item_image_event{
+    height: 50% !important;
+    width: 100%;
+    object-fit: cover;
+}
+.content_item_event{
+    padding:1.5rem;
+}
+
+/* page admissions */
+.page_Admissions{
+    padding:3rem 0rem;
+}
+.title_admissions{
+    justify-content: center;
+    padding: 0 15px 30px;
+}
+.text_admissions{
+    margin: auto;
+    text-align: center;
+    padding: 0rem 2rem;
+}
+.col_edu_admissions{
+    width: 50%;
+    padding:0rem 1rem;
+}
+.image_education{
+    width: 50%;
+}
+.title_education{
+    text-transform: uppercase;
+}
+.content_education{
+    width: 50%;
+}
+.content_col_edu{
+    padding:1rem;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.image_education img{
+    height: 100%;
+    object-fit: cover;
+}
+.content_education{
+    padding:0rem 1rem;
+}
+
+
+/* page coope */
+.content_cooperate{
+    position: relative;
+}
+.img_cooperate{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+.img_item_cooperate{
+    width: 100%;
+    height: 100% !important;
+    object-fit: cover;
+}
+.content_image_cooperate{
+    position: absolute;
+    top:0;
+    width: 100%;
+    height: 100%;
+    left:0;
+    background-color: rgba(0, 0, 0, 0.336);
+    padding:2rem 0rem;
+}
+.text_cooperate{
+  
+    
+}
+.list_cooperate{
+    display: flex;
+    padding:2rem 0rem 
+}
+.item_cooperate{
+    width: 50%;
+    margin:0rem 1rem;
+    display: flex;
+    padding:0.7rem;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    
+}
+.image_cooperate{
+    width: 50%;
+}
+.content_cooperate_item{
+    width: 50%;
+    padding-left:1rem;
+}
+.title_cooperate{
+    text-transform: uppercase;
+}
+
+/* page cựu sinh viên  */
+.content_alumni{
+    padding:2rem 0rem;
+}
+.list_alumni{
+    padding:2rem 0rem;
+    display: flex;
+}
+.item_alumni{
+   
+    margin:0rem 1rem;
+    background-color: #e7dede3f;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+.content_item_alumni{
+    position: relative;
+    
+}
+.content_text_alumni{
+    padding:1rem;
+}
+.blog_alumni{
+    position: absolute;
+    bottom:0;
+    left:0;
+    background-color: red;
+}
+.blog_alumni span{
+    padding:1rem;
+    color:#fff;
+    text-transform: capitalize;
+}
+
+.multiple-items{
+    display: flex;
+    width: 100%;
+}
+.link_alumni{
+    color:#000;
+}
+.link_alumni:hover{
+    text-decoration: none;
+    
+}
+.icon_slick{
+    position: absolute;
+  font-size: 20px;
+    top: 45%;
+    color:#fff;
+}
+.icon_next{
+    right: -10px;
+    background-color: rgb(20, 20, 179);
+   
+}
+.icon_prev{
+    left:-10px;
+    background-color: rgb(20, 20, 179);
+}
+
+/* footer */
+.footer_page{
+    padding:2rem 0rem;
+    background-color: rgb(0 0 120);
+}
+.footer_infomation{
+    display: flex;
+}
+.footer_contact{
+    display: grid;
+    color:#fff;
+}
+.content_system{
+    display: grid;
+   
+}
+.system{
+    width: 25%;
+    color:#fff;
+}
+.line{
+    width: 80%;
+    left:0;
+}
+.content_system a{
+    color:#fff;
+}
+a:hover{
+    text-decoration: none !important;
 }
