--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -348,9 +348,19 @@ a{
 .footer_infomation{
     display: flex;
 }
+.logo_footer{
+    width: 70%;
+}
 .footer_contact{
     display: grid;
     color:#fff;
+   
+}
+.text_contact{
+    margin-top:1rem;
+}
+.text_contact i{
+    padding-right:1rem;
 }
 .content_system{
     display: grid;
@@ -359,14 +369,30 @@ a{
 .system{
     width: 25%;
     color:#fff;
+    padding:0rem 1rem;
 }
 .line{
-    width: 80%;
-    left:0;
+    width: 100%;
+    left: 0;
+    color: #ffffff !important;
 }
 .content_system a{
     color:#fff;
 }
+.title_system{
+    text-transform: uppercase;
+}
 a:hover{
     text-decoration: none !important;
+}
+.copyright_footer{
+    text-align: center;
+    width: 100%;
+     color:#fff;
+    background-color: rgb(3, 3, 78);;
+}
+.copyright_footer span{
+    padding:1rem 0rem;
+    width: 100%;
+    height: 100%;
 }
