--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -182,10 +182,11 @@
 /* page coope */
 .content_cooperate{
     position: relative;
+    height: 500px;
 }
 .img_cooperate{
     width: 100%;
-    height: 100%;
+    height: 100% !important;
     object-fit: cover;
 
 }
@@ -289,4 +290,31 @@
 .icon_prev{
     left:-10px;
     background-color: rgb(20, 20, 179);
+}
+/* virtual tour */
+.page_tour{
+    height: 100vh;
+    width: 100%;
+    margin-top:2rem;
+
+}
+.tour360{
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+.tour360 img{
+    height: 100%;
+    width: 100%;
+}
+.image_tour{
+    position: absolute;
+    bottom: 10%;
+    width: 100%;
+    text-align: center;
+}
+.image_tour a{
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 700;
 }
